--- a/.envexample
+++ b/.envexample
@@ -4,3 +4,5 @@ DB_URL_DEV=postgres://username:password@localhost:5432/db_name
 DB_URL_TEST=postgres://username:password@localhost:5432/db_name
 DB_URL_PROD=postgres://username:password@localhost:5432/db_name
 SESSION_SECRET=
+
+BOOKS_PER_PAGE_MAX=4
